# eat_what

./: CONTEXT.md  README.md  pyproject.toml
data/: recipes.csv
src/eat_what/: __init__.py  cli.py  ingredients_meat.py  ingredients_vegatable.py  pick_cli.py  planner.py  recipe_cli.py  selection.py  storage.py  text_format.py
tests/: test_planner.py  test_recipe_cli.py  test_storage.py
